crates/opentree-core/tests/snapshots/render_snapshots__favicon.snap
---
source: crates/opentree-core/tests/render_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
  <rect width="32" height="32" rx="8" fill="#16a34a"/>
  <text x="16" y="22" font-size="18" font-family="sans-serif" font-weight="bold"
        text-anchor="middle" fill="white">O</text>
</svg>
